# llm-action-extraction

./: .gitignore  README.md  apptainer.ranker.exp  evaluation.py  evaluation.sh  evaluation_extraction copy.py  evaluation_extraction.py  evaluation_first_match.py  evaluation_naruto.py  evaluation_naruto_sid_stack.py  experiment.py  extracted_labels.csv  gemma3.slurm  gemma3_12.slurm  llama32.slurm  pyproject.toml  requirements.txt  run.slurm
annotation_analysis/: pkl_samples.ipynb  read_sample_results.ipynb
annotation_analysis/samples/: sampled_A.csv  (+1 more)
diagnosis/: action_match_arg_mismatch.ipynb  all_models_comparison.ipynb  arg_error_composition.ipynb  matched_arg_diagonsis.ipynb  method_delta.ipynb  model_compare_nl2p.ipynb  model_comparison.ipynb  nl2p_arg_precision_recall.ipynb  nl2p_f1_vs_adjusted_f1.ipynb  nl2p_vs_gtp.ipynb
evaluation_naruto/: evaluation_naruto.py  extract_naruto_data.py
helper/: extract_label_from_pkl.py  split_miglani.py
hpc/: evaluation.sh  gemma3.slurm  gemma3_12.slurm  gemma3_27.slurm  llama32.slurm  llama33_70.slurm
logs/: nl2p_identify_verb_types.jsonl  nl2p_nl2p_1.jsonl  nl2p_remove_non_eventive_verbs.jsonl  nl2p_verb_arg.jsonl  nl2p_verb_args.jsonl
results/: cooking_labeled_text_data_nl2p_gpt-4o-mini.json  cooking_labeled_text_data_nl2p_gpt-4o-mini.pkl  refined_cooking_data_nl2p_gpt-4o-mini.json
scripts/: batch_evaluate.py  openai_batch_experiment.py  reparse_gpt3_result.py
src/: evaluation_helpers.py
tests/: test_batch_evaluate.py  test_evaluation.py  test_ollama_client.py  test_openai_batch_experiment.py  test_prompts.py
(+690 files in other folders)
