[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-action-extraction"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "scipy",
    "statsmodels",
    "ollama",
    "openai>=1.0.0",
    "python-dotenv==1.0.0",
    "anthropic>=0.10.0",
    "tabulate>=0.9.0",
    "ipykernel>=7.2.0",
    "jinja2>=3.1.6",
    "spacy>=3.8.0",
    "jupyter>=1.1.1",
    "click",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
